# solar

./: .gitignore  .prettierrc  Dockerfile  LICENSE.md  README.md  compose.dev.yml  compose.yml  docker-compose.yml  healthcheck.sh  index.html  manage.py  package-lock.json  package.json  pyproject.toml  solar.service  update.sh  vite.config.js  vite.config.mjs
.github/workflows/: ghcr.yml
config/backend/: Dockerfile
config/db/: Dockerfile
config/frontend/: Dockerfile  nginx.conf
config/mqtt/: Dockerfile  docker-entrypoint.sh  mosquitto.acl  mosquitto.conf
config/nginx/: Dockerfile  nginx.conf
config/web/: Dockerfile
docs/: DEPLOY.md
modbus/: asgi.py  settings.py  urls.py  wsgi.py
modbus/core/: apps.py  const.py  models.py  serializers.py  services.py  views.py
modbus/core/migrations/: 0002_alter_state_options.py
modbus/core/services/: capture.py  endpoints.py  web.py
modbus/core/tests/: testdata.py
modbus/front/: apps.py
modbus/front/templates/: _base.html  charts.html  charts.js  index.css  index.html  index.js  style.css
solar/: apps.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
solar-ui/: App.jsx  date.js  index.css  index.html  index.jsx  locale.js  meta.js  render.js  storage.js  utils.js
solar-ui/components/: Hint.jsx  LegalNotice.jsx  NavigationBar.jsx  NetworkIndicator.jsx  NetworkText.jsx  RefreshButton.jsx  RefreshIcon.jsx
solar-ui/components/charts/: Chart.jsx  ChartDateTimePicker.jsx  ChartDateTimeStepper.jsx  ChartPresetButtonGroup.jsx  ChartPresetButtons.jsx  ChartSeriesPicker.jsx
solar-ui/components/generic/: ErrorText.jsx  ExternalText.jsx  HintText.jsx  LoadingText.jsx  NetworkText.jsx  Separator.jsx
solar-ui/components/log/: LogFilter.jsx  LogFilters.jsx  LogList.jsx  LogListItem.jsx  LogListItemGroup.jsx
solar-ui/components/parameters/: LegalNotice.jsx  ParameterList.jsx  ParameterListItem.jsx  RefreshPrompt.jsx
solar-ui/components/production/: ProductionList.jsx  ProductionListItem.jsx
solar-ui/components/settings/: AdvancedSettingsForm.jsx  AppearanceSettingsForm.jsx  DeviceSettingsForm.jsx  MainSettingsForm.jsx  SettingsAutomationForm.jsx  SettingsForm.jsx  SettingsLocalForm.jsx
solar-ui/routes/: About.jsx  Charts.jsx  Log.jsx  Main.jsx  Parameters.jsx  Production.jsx  Settings.jsx
solar/core/: apps.py  const.py  etl.py  models.py  serializers.py  views.py
solar/core/migrations/: 0003_rename_charge_power_state_battery_apparent_power.py  0005_controllog.py  0006_rename_controllog_logentry.py  0009_statecache_remove_logentry_id_and_more.py  0010_rename_state_stateraw.py  0011_statearchive.py  0013_settingsentry.py  0014_remove_logentry_data_logentry_category_logentry_name_and_more.py  0017_remove_statearchive_dc_current_and_more.py
solar/core/services/: __init__.py  (+9 more)
solar/front/: apps.py  views.py
solar/migrations/: 0001_initial.py  0004_remove_state_current_time.py  0007_state_tiers.py  0008_remove_state_id_remove_statet1_id_remove_statet2_id_and_more.py  0012_remove_logentry_field_name_remove_logentry_new_value_and_more.py  0015_update_logentry_name.py  0016_logentrycopy.py
solar/services/: logging.py  publish.py  settings.py  transform.py  web.py
(+24 files in other folders)
