[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
astral = "^3.2"
django = "^5.2"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.16.0"
drf-spectacular = "^0.28.0"
gunicorn = "^23.0.0"
paho-mqtt = "^2.1.0"
psycopg = {extras = ["binary"], version = "^3.2.7"}
pymodbus = "<3.7"  # 3.7.3 had major refactor (in a point release...) which caused performance issues
pyserial = "^3.5"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.6"
pylint-django = "^2.6.1"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.pylint]
disable = ["broad-exception-raised", "missing-class-docstring", "missing-function-docstring", "missing-module-docstring", "too-few-public-methods"]
django-settings-module = "solar.settings"
ignore = "migrations"
load-plugins = ["pylint_django"]
max-attributes = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
